# Autonomous-Ball-Pick-up-Car

./: .gitignore  .gitmodules  README.md  map.pbstream.yaml
algo_ws/a_star/: CMakeLists.txt
algo_ws/a_star/src/: a_star.cpp
carto_workspace/protobuf-3.6.1/: Makefile  config.status  libtool
carto_workspace/protobuf-3.6.1/benchmarks/: Makefile
carto_workspace/protobuf-3.6.1/conformance/: Makefile
carto_workspace/protobuf-3.6.1/src/: Makefile  libprotoc.la  protoc
carto_workspace/protobuf-3.6.1/src/.libs/: libprotobuf-lite.so.17.0.0  protoc
carto_workspace/src/: .rosinstall
carto_workspace/src/cartographer/scripts/: install_abseil.sh  install_proto3.sh
cartographer_workspace/: carto_slam.sh  log  map_save.sh
cartographer_workspace/install_isolated/: _setup_util.py  local_setup.sh  setup.sh
cartographer_workspace/install_isolated/lib/cartographer_ros/: cartographer_pbstream_map_publisher
cartographer_workspace/src/: .rosinstall
include/motor/: motor.h
log/: latest_list
src/main/: main.ino
src/move/include/motor/: motor.cpp
structure/: assembly_20241201.SLDASM  connecter_body_3D_printing_20241201.SLDPRT  connecter_fixer_3D_printing.SLDPRT  connecter_tail_acrylic_4mm_20241202.SLDPRT  core_stick_supporter_downside_3D_printing_20241130.SLDPRT  core_stick_supporter_upside_3D_printing_20241130.SLDPRT  picker_assembly.SLDASM  picker_assembly_20241130.SLDASM  picker_car_connecter_3D_printing_20241130.SLDPRT  picker_connect_3D_printing_20241129.SLDPRT  picker_connect_3mm_3D_printing_20241129.SLDPRT  picker_sidewall_3D_printing_20241129.SLDPRT  sidewall_acrylic_4mm_20241201.SLDPRT  stick_supporter_3D_printing_20241130.SLDPRT
structure/1st/: core_stick_supporter_downside_3D_printing_20241130.SLDPRT  picker_assembly_20241130.SLDASM  picker_car_connecter_3D_printing_20241130.SLDPRT  picker_connect_3D_printing_20241129.SLDPRT  picker_sidewall_3D_printing_20241129.SLDPRT  stick_supporter_3D_printing_20241130.SLDPRT
structure/2nd/: center_stick_3D_printing_20241201.SLDPRT  connecter_3D_printing_20241201.SLDPRT  picker_assembly_20241201.SLDASM
structure/2nd/manufacture_2nd/: sidewall_acrylic_4mm.DXF
structure/3rd/: assembly_20241201.SLDASM  connecter_body_3D_printing_20241201.SLDPRT  connecter_ear_3D_printing_20241201.SLDPRT  core_stick_3D_printing_20241201.SLDPRT  sidewall_acrylic_4mm.SLDPRT  sidewall_acrylic_4mm_20241201.SLDPRT
structure/manufacture/: core_stick_supporter_downside_3D_printing_20241130.STL  core_stick_supporter_upside_3D_printing_20241130.STL  picker_car_connecter_3D_printing_20241130.STL  picker_connect_3D_printing_20241129.STL  picker_sidewall_3D_printing_20241129.STL  stick_supporter_3D_printing_20241130.STL
workspace/: log
workspace/abp_planner/: CMakeLists.txt
workspace/devel/: .catkin
workspace/src/: map.yaml
workspace/src/abp_local_planner/: CMakeLists.txt  abp_local_planner_plugin.xml  package.xml
workspace/src/abp_planner/: CMakeLists.txt  abp_planner_plugin.xml  package.xml
workspace/src/active_move/: active_move.ino
workspace/src/arduino_communication/: CMakeLists.txt
workspace/src/ball_detection/: CMakeLists.txt  package.xml
workspace/src/camera_view/: CMakeLists.txt  package.xml
workspace/src/icp_localization/: CMakeLists.txt  package.xml
workspace/src/imu/: package.xml
workspace/src/imu_corrected/: CMakeLists.txt  package.xml
workspace/src/laser_odom/: CMakeLists.txt  package.xml
workspace/src/laser_odom/src/: laser_odom.cpp
workspace/src/laser_to_arduino/: CMakeLists.txt  package.xml
workspace/src/laser_to_arduino/launch/: laser_to_arduino.launch
workspace/src/laser_to_arduino/src/: arduino_communication.cpp  exploration_rtt.cpp  laser_to_arduino.cpp  laser_to_arduino_node.cpp
workspace/src/laser_to_arduino/src/include/: rtt.h
workspace/src/loose_abp_planner/: CMakeLists.txt  loose_abp_planner_plugin.xml  package.xml
workspace/src/map/: package.xml
workspace/src/move/: move.ino
workspace/src/nav_driver/: CMakeLists.txt  package.xml
workspace/src/nav_point_to_point/: CMakeLists.txt  package.xml
workspace/src/navigation_driver/: CMakeLists.txt
workspace/src/obstacle_avoid/: obstacle_avoidance.py
workspace/src/pgm_to_pointcloud/: CMakeLists.txt  package.xml
workspace/src/pgm_to_pointcloud/src/: pgm_to_pointcloud.cpp
workspace/src/point_to_point_nav/: CMakeLists.txt  package.xml
workspace/src/simple_explore/: CMakeLists.txt  package.xml
workspace/src/usb_camera/: package.xml
workspace/src/usb_camera_view/: CMakeLists.txt  package.xml
workspace/usb_camera/: CMakeLists.txt
(+318 files in other folders)
